# security_pr

./: .gitignore  .mcp.json  LICENSE  README.md  action.yml  action_entrypoint.py  pyproject.toml
.github/workflows/: publish.yml  test-action.yml  test.yml
examples/: pr-triage.yml
mcp_ai_auditor/: config.py  models.py
mcp_ai_auditor/analysis/: data_flow.py
mcp_ai_auditor/cli/: main.py
mcp_ai_auditor/cve/: checker.py  parsers.py
mcp_ai_auditor/gatekeeper/: config.py  dedup.py  github_client.py  heuristics.py  ingest.py  pipeline.py  providers.py  scorecard.py  vision.py
mcp_ai_auditor/mcp/: __main__.py  server.py
mcp_ai_auditor/scanners/: vulnerability_scanner.py
oss_maintainer_toolkit/: config.py  models.py
oss_maintainer_toolkit/analysis/: data_flow.py
oss_maintainer_toolkit/cli/: main.py
oss_maintainer_toolkit/cve/: checker.py  parsers.py
oss_maintainer_toolkit/gatekeeper/: __init__.py  audit_backlog.py  audit_scorecard.py  coaching.py  config.py  conflict_detection.py  conflict_scorecard.py  contributor_profiles.py  contributor_scorecard.py  dedup.py  github_client.py  heuristics.py  ingest.py  issue_cache.py  issue_dedup.py  issue_heuristics.py  issue_ingest.py  issue_pipeline.py  issue_scorecard.py  labeling.py  labeling_scorecard.py  linking.py  linking_scorecard.py  models.py  pipeline.py  review_routing.py  review_routing_scorecard.py  scorecard.py  staleness.py  staleness_scorecard.py  vision.py  vision_generation.py
oss_maintainer_toolkit/mcp/: __main__.py  server.py
oss_maintainer_toolkit/scanners/: patterns.py  vulnerability_scanner.py
reports/: openclaw-pr-body.md  openclaw-triage-2026-02-16.md  openclaw-triage-2026-02-18.json  openclaw-triage-2026-02-18.md
scripts/: triage_batch.py
src/analysis/: data_flow.py
src/cli/: main.py
src/cve/: checker.py  parsers.py
src/gatekeeper/: cache.py  config.py  dedup.py  github_client.py  heuristics.py  ingest.py  models.py  pipeline.py  scorecard.py  vision.py
src/mcp/: server.py
src/scanners/: vulnerability_scanner.py
tests/: conftest.py  test_action_badges.py  test_audit_backlog.py  test_coaching.py  test_conflict_detection.py  test_contributor_profiles.py  test_cve_checker.py  test_data_flow.py  test_gatekeeper_cache.py  test_gatekeeper_dedup.py  test_gatekeeper_github_client.py  test_gatekeeper_heuristics.py  test_gatekeeper_ingest.py  test_gatekeeper_pipeline.py  test_gatekeeper_providers.py  test_gatekeeper_scorecard.py  test_gatekeeper_vision.py  test_issue_cache.py  test_issue_dedup.py  test_issue_heuristics.py  test_issue_ingest.py  test_issue_pipeline.py  test_issue_scorecard.py  test_labeling.py  test_linking.py  test_mcp_server.py  test_openclaw_scenarios.py  test_review_routing.py  test_staleness.py  test_vision_generation.py  test_vulnerability_scanner.py
tests/fixtures/: package_vulnerable.json  requirements_vulnerable.txt  sample_claude_response.json  sample_clean.py  sample_issue_metadata.json  sample_pr_files.json  sample_pr_metadata.json  sample_taint.py  sample_user.json  sample_vision_document.yaml  sample_vulnerable.py
vision_documents/: openclaw.yaml
