[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-ai-auditor"
version = "0.1.0"
description = "AI-powered security auditor — MCP tools for vulnerability scanning, data flow analysis, and CVE checking"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.25",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
]

[project.scripts]
auditor = "src.cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
