[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oss-maintainer-toolkit"
version = "0.4.0"
description = "OSS Maintainer Toolkit — automated triage for PRs, issues, contributors, and review queues"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Pranay Om" },
]
keywords = ["github", "pr-triage", "issue-triage", "maintainer", "governance", "dedup", "gatekeeper", "oss"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.25",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
gatekeeper = [
    "sentence-transformers>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/pranayom/oss-maintainer-toolkit"
Repository = "https://github.com/pranayom/oss-maintainer-toolkit"
Issues = "https://github.com/pranayom/oss-maintainer-toolkit/issues"

[project.scripts]
maintainer = "oss_maintainer_toolkit.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["oss_maintainer_toolkit"]
exclude = [
    "oss_maintainer_toolkit/scanners",
    "oss_maintainer_toolkit/analysis",
    "oss_maintainer_toolkit/cve",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
